
########### install files ###############

SET( symbols
	img001greek.png
	img002greek.png
	img003greek.png
	img004greek.png
	img005greek.png
	img006greek.png
	img007greek.png
	img008greek.png
	img009greek.png
	img010greek.png
	img011greek.png
	img012greek.png
	img013greek.png
	img014greek.png
	img015greek.png
	img016greek.png
	img017greek.png
	img018greek.png
	img019greek.png
	img020greek.png
	img021greek.png
	img022greek.png
	img023greek.png
	img024greek.png
	img025greek.png
	img026greek.png
	img027greek.png
	img028greek.png
	img029greek.png
	img030greek.png
	img031greek.png
	img032greek.png
	img033greek.png
	img034greek.png
	img035greek.png
	img036greek.png
	img037greek.png
	img038greek.png
	img039greek.png
	img040greek.png
	img041greek.png
	img042greek.png
	img043greek.png
	img044greek.png
	img045greek.png
	img046greek.png
	img047greek.png
	img048greek.png
	img049greek.png
	img050greek.png
	img051greek.png
	img052greek.png
	img053greek.png
	img054greek.png
	img055greek.png
	img056greek.png
	img057greek.png
	img058greek.png
	img059greek.png
	img060greek.png
	img061greek.png
	img062greek.png
	img063greek.png
	img064greek.png
	img065greek.png
)

INSTALL( FILES ${symbols} DESTINATION share/apps/kile/mathsymbols/greek )
