picsdir = $(kde_datadir)/kile/mathsymbols/misc-math

pics_DATA = img001misc-math.png \
	img002misc-math.png \
	img003misc-math.png \
	img004misc-math.png \
	img005misc-math.png \
	img006misc-math.png \
	img007misc-math.png \
	img008misc-math.png \
	img009misc-math.png \
	img010misc-math.png \
	img011misc-math.png \
	img012misc-math.png \
	img013misc-math.png \
	img014misc-math.png \
	img015misc-math.png \
	img016misc-math.png \
	img017misc-math.png \
	img018misc-math.png \
	img019misc-math.png \
	img020misc-math.png \
	img021misc-math.png \
	img022misc-math.png \
	img023misc-math.png \
	img024misc-math.png \
	img025misc-math.png \
	img026misc-math.png \
	img027misc-math.png \
	img028misc-math.png \
	img029misc-math.png \
	img030misc-math.png \
	img031misc-math.png \
	img032misc-math.png \
	img033misc-math.png \
	img034misc-math.png \
	img035misc-math.png \
	img036misc-math.png \
	img037misc-math.png \
	img038misc-math.png \
	img039misc-math.png \
	img040misc-math.png \
	img041misc-math.png \
	img042misc-math.png \
	img043misc-math.png \
	img044misc-math.png \
	img045misc-math.png \
	img046misc-math.png \
	img047misc-math.png \
	img048misc-math.png \
	img049misc-math.png \
	img050misc-math.png \
	img051misc-math.png \
	img052misc-math.png \
	img053misc-math.png \
	img054misc-math.png \
	img055misc-math.png \
	img056misc-math.png \
	img057misc-math.png \
	img058misc-math.png \
	img059misc-math.png \
	img060misc-math.png \
	img061misc-math.png \
	img062misc-math.png \
	img063misc-math.png \
	img064misc-math.png \
	img065misc-math.png \
	img066misc-math.png \
	img067misc-math.png \
	img068misc-math.png \
	img069misc-math.png \
	img070misc-math.png \
	img071misc-math.png \
	img072misc-math.png \
	img073misc-math.png \
	img074misc-math.png \
	img075misc-math.png \
	img076misc-math.png \
	img077misc-math.png \
	img078misc-math.png \
	img079misc-math.png \
	img080misc-math.png \
	img081misc-math.png \
	img082misc-math.png \
	img083misc-math.png \
	img084misc-math.png \
	img085misc-math.png \
	img086misc-math.png \
	img087misc-math.png \
	img088misc-math.png \
	img089misc-math.png \
	img090misc-math.png \
	img091misc-math.png \
	img092misc-math.png \
	img093misc-math.png \
	img094misc-math.png \
	img095misc-math.png
