picsdir = $(kde_datadir)/kile/mathsymbols/misc-text

pics_DATA = img001misc-text.png \
	img002misc-text.png \
	img003misc-text.png \
	img004misc-text.png \
	img005misc-text.png \
	img006misc-text.png \
	img007misc-text.png \
	img008misc-text.png \
	img009misc-text.png \
	img010misc-text.png \
	img011misc-text.png \
	img012misc-text.png \
	img013misc-text.png \
	img014misc-text.png \
	img015misc-text.png \
	img016misc-text.png \
	img017misc-text.png \
	img018misc-text.png \
	img019misc-text.png \
	img020misc-text.png \
	img021misc-text.png \
	img022misc-text.png \
	img023misc-text.png \
	img024misc-text.png \
	img025misc-text.png \
	img026misc-text.png \
	img027misc-text.png \
	img028misc-text.png \
	img029misc-text.png \
	img030misc-text.png \
	img031misc-text.png \
	img032misc-text.png \
	img033misc-text.png \
	img034misc-text.png \
	img035misc-text.png \
	img036misc-text.png \
	img037misc-text.png \
	img038misc-text.png \
	img039misc-text.png \
	img040misc-text.png \
	img041misc-text.png \
	img042misc-text.png \
	img043misc-text.png \
	img044misc-text.png \
	img045misc-text.png \
	img046misc-text.png \
	img047misc-text.png \
	img048misc-text.png \
	img049misc-text.png \
	img050misc-text.png \
	img051misc-text.png \
	img052misc-text.png \
	img053misc-text.png \
	img054misc-text.png \
	img055misc-text.png \
	img056misc-text.png \
	img057misc-text.png \
	img058misc-text.png \
	img059misc-text.png \
	img060misc-text.png \
	img061misc-text.png \
	img062misc-text.png \
	img063misc-text.png \
	img064misc-text.png \
	img065misc-text.png \
	img066misc-text.png \
	img067misc-text.png \
	img068misc-text.png \
	img069misc-text.png \
	img070misc-text.png \
	img071misc-text.png \
	img072misc-text.png \
	img073misc-text.png \
	img074misc-text.png \
	img075misc-text.png \
	img076misc-text.png \
	img077misc-text.png \
	img078misc-text.png \
	img079misc-text.png \
	img080misc-text.png \
	img081misc-text.png \
	img082misc-text.png \
	img083misc-text.png \
	img084misc-text.png \
	img085misc-text.png \
	img086misc-text.png \
	img087misc-text.png \
	img088misc-text.png \
	img089misc-text.png \
	img090misc-text.png \
	img091misc-text.png \
	img092misc-text.png \
	img093misc-text.png \
	img094misc-text.png \
	img095misc-text.png \
	img096misc-text.png \
	img097misc-text.png \
	img098misc-text.png \
	img099misc-text.png \
	img100misc-text.png \
	img101misc-text.png \
	img102misc-text.png \
	img103misc-text.png \
	img104misc-text.png \
	img105misc-text.png \
	img106misc-text.png \
	img107misc-text.png \
	img108misc-text.png \
	img109misc-text.png \
	img110misc-text.png \
	img111misc-text.png \
	img112misc-text.png \
	img113misc-text.png \
	img114misc-text.png \
	img115misc-text.png \
	img116misc-text.png \
	img117misc-text.png \
	img118misc-text.png \
	img119misc-text.png \
	img120misc-text.png \
	img121misc-text.png \
	img122misc-text.png \
	img123misc-text.png \
	img124misc-text.png \
	img125misc-text.png \
	img126misc-text.png \
	img127misc-text.png \
	img128misc-text.png \
	img129misc-text.png \
	img130misc-text.png \
	img131misc-text.png \
	img132misc-text.png \
	img133misc-text.png \
	img134misc-text.png \
	img135misc-text.png
