
########### install files ###############

SET( symbols
	img001operators.png
	img002operators.png
	img003operators.png
	img004operators.png
	img005operators.png
	img006operators.png
	img007operators.png
	img008operators.png
	img009operators.png
	img010operators.png
	img011operators.png
	img012operators.png
	img013operators.png
	img014operators.png
	img015operators.png
	img016operators.png
	img017operators.png
	img018operators.png
	img019operators.png
	img020operators.png
	img021operators.png
	img022operators.png
	img023operators.png
	img024operators.png
	img025operators.png
	img026operators.png
	img027operators.png
	img028operators.png
	img029operators.png
	img030operators.png
	img031operators.png
	img032operators.png
	img033operators.png
	img034operators.png
	img035operators.png
	img036operators.png
	img037operators.png
	img038operators.png
	img039operators.png
	img040operators.png
	img041operators.png
	img042operators.png
	img043operators.png
	img044operators.png
	img045operators.png
	img046operators.png
	img047operators.png
	img048operators.png
	img049operators.png
	img050operators.png
	img051operators.png
	img052operators.png
	img053operators.png
	img054operators.png
	img055operators.png
	img056operators.png
	img057operators.png
	img058operators.png
	img059operators.png
	img060operators.png
	img061operators.png
	img062operators.png
	img063operators.png
	img064operators.png
	img065operators.png
	img066operators.png
	img067operators.png
	img068operators.png
	img069operators.png
	img070operators.png
	img071operators.png
	img072operators.png
	img073operators.png
	img074operators.png
	img075operators.png
	img076operators.png
	img077operators.png
	img078operators.png
	img079operators.png
	img080operators.png
	img081operators.png
	img082operators.png
	img083operators.png
	img084operators.png
	img085operators.png
	img086operators.png
	img087operators.png
	img088operators.png
	img089operators.png
	img090operators.png
	img091operators.png
	img092operators.png
	img093operators.png
	img094operators.png
	img095operators.png
	img096operators.png
	img097operators.png
	img098operators.png
	img099operators.png
	img100operators.png
	img101operators.png
	img102operators.png
	img103operators.png
	img104operators.png
	img105operators.png
	img106operators.png
	img107operators.png
	img108operators.png
	img109operators.png
	img110operators.png
	img111operators.png
	img112operators.png
	img113operators.png
)
INSTALL( FILES ${symbols} DESTINATION share/apps/kile/mathsymbols/operators )

