
########### install files ###############

SET( symbols
	img001relation.png
	img002relation.png
	img003relation.png
	img004relation.png
	img005relation.png
	img006relation.png
	img007relation.png
	img008relation.png
	img009relation.png
	img010relation.png
	img011relation.png
	img012relation.png
	img013relation.png
	img014relation.png
	img015relation.png
	img016relation.png
	img017relation.png
	img018relation.png
	img019relation.png
	img020relation.png
	img021relation.png
	img022relation.png
	img023relation.png
	img024relation.png
	img025relation.png
	img026relation.png
	img027relation.png
	img028relation.png
	img029relation.png
	img030relation.png
	img031relation.png
	img032relation.png
	img033relation.png
	img034relation.png
	img035relation.png
	img036relation.png
	img037relation.png
	img038relation.png
	img039relation.png
	img040relation.png
	img041relation.png
	img042relation.png
	img043relation.png
	img044relation.png
	img045relation.png
	img046relation.png
	img047relation.png
	img048relation.png
	img049relation.png
	img050relation.png
	img051relation.png
	img052relation.png
	img053relation.png
	img054relation.png
	img055relation.png
	img056relation.png
	img057relation.png
	img058relation.png
	img059relation.png
	img060relation.png
	img061relation.png
	img062relation.png
	img063relation.png
	img064relation.png
	img065relation.png
	img066relation.png
	img067relation.png
	img068relation.png
	img069relation.png
	img070relation.png
	img071relation.png
	img072relation.png
	img073relation.png
	img074relation.png
	img075relation.png
	img076relation.png
	img077relation.png
	img078relation.png
	img079relation.png
	img080relation.png
	img081relation.png
	img082relation.png
	img083relation.png
	img084relation.png
	img085relation.png
	img086relation.png
	img087relation.png
	img088relation.png
	img089relation.png
	img090relation.png
	img091relation.png
	img092relation.png
	img093relation.png
	img094relation.png
	img095relation.png
	img096relation.png
	img097relation.png
	img098relation.png
	img099relation.png
	img100relation.png
	img101relation.png
	img102relation.png
	img103relation.png
	img104relation.png
	img105relation.png
	img106relation.png
	img107relation.png
	img108relation.png
	img109relation.png
	img110relation.png
	img111relation.png
	img112relation.png
	img113relation.png
	img114relation.png
	img115relation.png
	img116relation.png
	img117relation.png
	img118relation.png
	img119relation.png
	img120relation.png
	img121relation.png
	img122relation.png
	img123relation.png
	img124relation.png
	img125relation.png
	img126relation.png
	img127relation.png
	img128relation.png
	img129relation.png
	img130relation.png
	img131relation.png
	img132relation.png
	img133relation.png
	img134relation.png
	img135relation.png
	img136relation.png
	img137relation.png
	img138relation.png
	img139relation.png
	img140relation.png
	img141relation.png
	img142relation.png
	img143relation.png
	img144relation.png
	img145relation.png
	img146relation.png
	img147relation.png
	img148relation.png
	img149relation.png
	img150relation.png
	img151relation.png
	img152relation.png
)

INSTALL( FILES ${symbols} DESTINATION share/apps/kile/mathsymbols/relation )
