
########### install files ###############

SET( symbols
	img001special.png
	img002special.png
	img003special.png
	img004special.png
	img005special.png
	img006special.png
	img007special.png
	img008special.png
	img009special.png
	img010special.png
	img011special.png
	img012special.png
	img013special.png
	img014special.png
	img015special.png
	img016special.png
	img017special.png
	img018special.png
	img019special.png
	img020special.png
	img021special.png
	img022special.png
	img023special.png
	img024special.png
	img025special.png
	img026special.png
	img027special.png
	img028special.png
	img029special.png
	img030special.png
	img031special.png
	img032special.png
	img033special.png
	img034special.png
	img035special.png
	img036special.png
	img037special.png
	img038special.png
	img039special.png
	img040special.png
	img041special.png
	img042special.png
	img043special.png
	img044special.png
	img045special.png
	img046special.png
	img047special.png
	img048special.png
	img049special.png
	img050special.png
	img051special.png
	img052special.png
	img053special.png
	img054special.png
	img055special.png
	img056special.png
	img057special.png
	img058special.png
	img059special.png
	img060special.png
	img061special.png
	img062special.png
	img063special.png
	img064special.png
	img065special.png
	img066special.png
	img067special.png
	img068special.png
	img069special.png
	img070special.png
	img071special.png
	img072special.png
	img073special.png
	img074special.png
	img075special.png
	img076special.png
	img077special.png
	img078special.png
	img079special.png
	img080special.png
	img081special.png
	img082special.png
	img083special.png
	img084special.png
	img085special.png
	img086special.png
	img087special.png
	img088special.png
	img089special.png
	img090special.png
	img091special.png
	img092special.png
	img093special.png
	img094special.png
	img095special.png
	img096special.png
	img097special.png
	img098special.png
	img099special.png
	img100special.png
	img101special.png
	img102special.png
	img103special.png
	img104special.png
	img105special.png
	img106special.png
	img107special.png
	img108special.png
	img109special.png
	img110special.png
	img111special.png
	img112special.png
	img113special.png
	img114special.png
	img115special.png
	img116special.png
	img117special.png
	img118special.png
	img119special.png
	img120special.png
	img121special.png
	img122special.png
	img123special.png
	img124special.png
	img125special.png
	img126special.png
	img127special.png
	img128special.png
	img129special.png
	img130special.png
	img131special.png
	img132special.png
	img133special.png
	img134special.png
	img135special.png
	img136special.png
	img137special.png
	img138special.png
	img139special.png
	img140special.png
	img141special.png
	img142special.png
	img143special.png
	img144special.png
	img145special.png
	img146special.png
	img147special.png
	img148special.png
	img149special.png
	img150special.png
	img151special.png
	img152special.png
	img153special.png
	img154special.png
	img155special.png
	img156special.png
	img157special.png
	img158special.png
	img159special.png
	img160special.png
	img161special.png
	img162special.png
	img163special.png
	img164special.png
	img165special.png
	img166special.png
	img167special.png
	img168special.png
	img169special.png
	img170special.png
	img171special.png
	img172special.png
	img173special.png
	img174special.png
	img175special.png
)

INSTALL( FILES ${symbols} DESTINATION share/apps/kile/mathsymbols/special )